封装公共crud，UI、BLL解耦合

--- a/FairHR.OAuth.IDAL/FairHR.OAuth.IDAL.csproj
+++ b/FairHR.OAuth.IDAL/FairHR.OAuth.IDAL.csproj
@@ -40,7 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBaseDal.cs" />
+    <Compile Include="IDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FairHR.OAuth.Model\FairHR.OAuth.Model.csproj">
+      <Project>{f10fca06-9e0b-4ae9-91e0-fa1f15644fca}</Project>
+      <Name>FairHR.OAuth.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
