--- a/FairHR.OAuth/Web.config
+++ b/FairHR.OAuth/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="AuthContext" connectionString="server=.;database=OAuthPractice;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="FairModel" connectionString="DATA SOURCE=FYW100;USER ID=FAIRMANAGER;PASSWORD=FAIRMANAGER;" providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="Customer" connectionString="DATA SOURCE=FYW100;USER ID=FAIRMANAGER;PASSWORD=FAIRMANAGER;" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
