--- a/FairHR.OAuth/packages.config
+++ b/FairHR.OAuth/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
@@ -47,6 +48,8 @@
   <package id="Swagger.Net.UI" version="1.1.0" targetFramework="net452" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
   <package id="WebActivator" version="1.5.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
